--- a/051319_Teaching_Deep_Learning_to_the_Marginalized_Without_a_Math_Background.ipynb
+++ b/051319_Teaching_Deep_Learning_to_the_Marginalized_Without_a_Math_Background.ipynb
@@ -7,6 +7,7 @@
       "version": "0.3.2",
       "provenance": [],
       "collapsed_sections": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -265,11 +266,13 @@
         "\n",
         "Slope? Yes, my dears, it's ALL ABOUT SLOPE.  All your fancy experts throw around the term, \"gradient descent,\" but \"gradient\" just means slope.  Finding the slope of the bowl's surface, where our ball lies, tells us the direction our ball should roll to make the quickest descent to the bottom of the bowl where error is 0 (i.e., where our ball would be touching the syn0, syn1 grid plane).  \n",
         "\n",
-        "Now, let's make a key distinction as we continue down the path of you becoming a genius:  Gradient descent is the master plan--it changes the weights to reduce the error in our prediction with each iteration.  \n",
-        "**DCQ: is my explanation on weights below accurate?**\n",
-        "What is a \"weight?\"  They are the values (the numbers) in our synapse matrices (there are 12 in syn0 and 4 in syn1).  Each line you saw connecting neurons in the diagram above is a synapse, aka a weight, and think of a weight as \"a number that quantifies how important ___ is.\"  If a weight is a big number, that means \"the relationship between this value in l0 has a big impact on its corresponding value in l1.\"  In other words, \"this feature/question is a big contributor to an accurate prediction in l2.\"  \n",
+        "Now, let's make a key distinction as we continue down the path of you becoming a genius:  Gradient descent is the master plan, and Back Propagation is the main tool for achieving that plan.  Here's what I mean:  \n",
         "\n",
-        "Back propagation is the method we use to compute the gradient, and that gradient value then tells us how much to re-prioritize each weight (i.e., each relationship between feature questions)in the next iteration.  Each point on the dotted line as it descends to the bottom of the bowl is one iteration of the neural network.\n",
+        "####Gradient Descent is the Master Plan\n",
+        "It changes the weights to reduce the error in our prediction with each iteration.  What is a \"weight?\"  It's an important concept.  Weights are the values (the numbers) in our synapse matrices (there are 12 in syn0 and 4 in syn1).  Each line you saw connecting neurons in the diagram above is a synapse, aka a weight, and think of a weight as \"a number that quantifies how important a given neuron (or feature) is to the prediction.\"  If a weight is a big value (whether positive or negative), that means \"this value in layer 0 has a big impact on its corresponding value in layer 1.\"  In other words, \"this feature/question is a big contributor to an accurate prediction in l2.\"  If a weight is close to zero, that means the importance of this feature/question is largely irrelevant to making accurate predictions.\n",
+        "\n",
+        "####Back Propagation is the Main Tool for Achieving Gradient Descent\n",
+        "Back propagation is the method we use to compute the gradient, and that gradient value then tells us how much to re-prioritize each weight (i.e., each relationship between feature questions) in the next iteration.  Each point on the dotted line as it descends to the bottom of the bowl is one iteration of the neural network.\n",
         "\n",
         "So, what is an iteration?  **That's** a key question.  The first part of an iteration is our feed forward, which we saw above.  It is the feed forward that gets our white ball to its starting position at Point A, from whence it rolls down the curvy surface of our red bowl towards the bottom, which sits on the white grid, where \"Accurate Prediction\" lives (i.e., 0 in the cost function, the global minimum).  Each dot of that dotted white path represents a tweak, or update of the prediction weights assigned to syn0 and syn1.  Each iteration begins with a fresh feed forward that puts the ball in a new position in the bowl.\n",
         "\n",
@@ -861,7 +864,7 @@
         "colab_type": "text"
       },
       "source": [
-        "##3.3) Let's walk through the math of Feed Forward slowly: \n",
+        "##3.3) Let's Walk Through the Math of Feed Forward Slowly: \n",
         "l0 x syn0 = l1LH, so in our example 1 x 3.66 = 3.66, but don't forget we have to add the other two products of l0 x the corresponding weights of syn0.  In our example, l0,2 x syn0,2= 0 x something = 0, so it doesn't matter.  But l0,3 x syn0,3 *does* matter because l0,3=1, so let's just make up a simple, convenient value for syn0,3 of 0.16.  Therefore, l0,3 x syn0,3 = 1 x 0.16 = 0.16.  Our product of l0,1 x syn0,1 + our product of l0,3 x syn0,3 = 3.66 + 0.16 = 3.82, and 3.82 is l1_LH.  Next, we have to run l1_LH through our nonlin() function to create a probability between 0 and 1.  Nonlin(l1_LH) uses the code, `return 1/(1+np.exp(-x))`, so in our example that would be: 1/(1+(2.718^-3.82))=0.98, so l1 (the RH side of the l1 node) is 0.98.\n",
         "\n",
         "So, what just happened with the equation: `1/(1+np.exp(-x)) = [1/(1+2.718^-3.82))] = 0.98` above?  The computer used some fancy code, `return 1/(1+np.exp(-x))`, to do what we could do manually with our eyeballs--it told us the corresponding y value of x = 3.82 on the sigmoid curve as pictured in this diagram:\n",
@@ -1012,7 +1015,7 @@
         "colab_type": "text"
       },
       "source": [
-        "##3.5) Visualizing Matrix Multiplication in Terms of the Neurons and Synapses of our Network\n",
+        "##3.5) Visualizing Matrix Multiplication in Terms of Neurons and Synapses\n",
         "Here's where these l0 and syn0 values would appear if we were to plug them into in our picture analogy of neurons and synapses:\n",
         "\n",
         "\n",
@@ -1159,7 +1162,7 @@
         "colab_type": "text"
       },
       "source": [
-        "##4.2) How far off is our Prediction when Compared to Survey Question #4?\n",
+        "##4.2) How Far Off is our Prediction when Compared to Survey Question #4?\n",
         "###Line 66\n",
         "```\n",
         "l2_error = y - l2\n",
@@ -1190,7 +1193,7 @@
         "colab_type": "text"
       },
       "source": [
-        "##4.3) Exactly what ***part*** of this network are we going to adjust?\n",
+        "##4.3) Exactly What ***Part*** of this Network Will We Adjust?\n",
         "\n",
         "When you first look at the diagram below, you might assume the brain of the network is the circles, the \"neurons\" of the neural network brain.  In fact, the real brain of a neural network, the part that actually learns and remembers, is the synapses, those lines that connect the circles in this diagram.  We have control over 16 variables in our network: 12 variables in the 3x4 matrix syn0, and 4 variables in the 4x1 vector syn1.  Look at this diagram and understand that every line (aka, \"edge\" or synapse) you see represents one variable, containing one number, aka one weight.  \n",
         "![alt text](https://lh3.googleusercontent.com/IfUkJ0AO07Lp0bLQ4GgIskT5e8LOnNak6PYfbWmmNQJCQ8jBVmyGRZoPd1duvcWT2nvQ5tp8RTDE3jJwswbe90Cur8DHfZGrs8oeYcygPHpnnYSNSpBuqjCclwTADhZJ2bRCKTGLJoY=w1920-h1080)\n",
@@ -1210,7 +1213,7 @@
         "colab_type": "text"
       },
       "source": [
-        "##4.4) Confidence Measures:  the genius that makes lifeless mathematical matrices full of routine numbers suddenly come alive and think like humans\n",
+        "##4.4) Confidence Measures:  the Genius that Brings Lifeless Numbers Alive To Think Like Humans\n",
         "###Line 88:  \n",
         "```\n",
         " l2_delta = l2_error*nonlin(l2,deriv=True)\n",
@@ -1683,26 +1686,9 @@
         "\n",
         "###Taking the confidence measure of each value of l2 = Taking the slope of l2 = Taking the derivative of l2!\n",
         "\n",
-        "Ain't that simple and lovely?  This fabulous process gives us the amounts by which we need to adjust each of the 12 values of syn0, and the 4 values of syn1....\n",
+        "Ain't that simple and lovely?  This fabulous process gives us the amounts by which we need to adjust each of the 12 values of syn0, and the 4 values of syn1.  If you understand the wonder of confidence measures, you're doin' just fine.  \n",
         "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "**DCQ: The question I want to answer in this transition to Section 5 of 5 is, \"Why do we even NEED to learn the chain rule if we can find our l1_delta and l2_delta just using confidence measures?\"\n",
-        "Below are my best guesses:\n",
-        "\n",
-        "1) Is it because using confidence measures only works in small, simple networks?  \n",
-        "\n",
-        "2) Or because the computing cost is much cheaper using back prop?  \n",
-        "\n",
-        "3) Or much more precise?\n",
-        "\n",
-        "4) Or confidence measure is the way humans calculate the delta, whereas back prop is the way computers calculate the delta...\n",
-        "???**\n",
-        "\n",
-        "...That is where The Chain Rule of calculus will give us a Back Propagation process that will allow us to rule the world!  Prepare to unleash the power within...\n"
+        "But wait, Kids--there's more!  When it comes to gradient descent and learning by trial-and-error, confidence measures are just the tip of the iceberg.  In the next section, I'm going to give you the whole iceberg: back propagation.  I'm going to teach you the chain rule of calculus, which will give you the back propagation process that will allow us to rule the world!  Prepare to unleash the power within...\n"
       ]
     },
     {
@@ -1723,7 +1709,9 @@
       },
       "source": [
         "##5.1) An Intro to Back Prop\n",
-        "{DCQ: I will add some kind of transition and intro here once I get your response to the above DCQ}\n",
+        "So you have learned confidence measures now, and you think that's cool.  Baby, lemme tell ya, you ain't seen nothin' yet.  Learning confidence measures is like discovering that apples only fall down from trees--never up.  But learning back propagation is like mastering the concepts of gravity well enough to launch a rocket into space.\n",
+        "\n",
+        "Yeah, that's what I'm talkin' 'bout.  Watch and learn...\n",
         "\n",
         "Now we have entered the brain of the beast; here is the secret sauce of Deep Learning.  Back propagation is the key tool of gradient descent, but back prop has a bad reputation for being intimidating to learn.  Well!  Let not terror grip your heart, my Dears, Dave is here to hold you close and keep you safe!\n",
         "\n",
@@ -2008,7 +1996,7 @@
         "```\n",
         "1 x 0.04 x 12.21 x 0.25 x -1 = -0.1221 = d l2_error / d syn0,1\n",
         "```\n",
-        "In other words, for every 1 we increase syn0,1, the l2_error decreases by 0.1221.\n",
+        "In other words, **for every 1 we increase syn0,1, the l2_error decreases by 0.1221.**\n",
         "\n",
         "\n",
         "\n",
@@ -2037,52 +2025,8 @@
         "\n",
         "\n",
         "\n",
-        "**DCQ: Adam, I am SUPER unsure if I have used the right values in my math below.  Can you please check it?**\n",
         "\n",
-        "Now let's walk through what would happen, if I updated syn0 for the next iteration, using line 116 of our code:\n",
-        "\n",
-        "```\n",
-        "l2 slopes after nonlin():    l2_error:                l2_delta: \n",
-        "[0.25] Not Confident        [ 0.50] Big Miss         [ 0.125] Big Change\n",
-        "[0.09] Fairly Confident  X  [ 0.10] Small Miss    =  [ 0.009] Small-ish Change\n",
-        "[0.05] Confident            [-0.05] Tiny Miss        [-0.003] Tiny Change\n",
-        "[0.21] Not Confident        [-0.70] Very Big Miss    [-0.150] Huge Change\n",
-        "\n",
-        "line 100:\n",
-        "l1_error = l2_delta.dot(syn1.T)\n",
-        "= (-0.1221) x 12.21\n",
-        "= 1.49\n",
-        "\n",
-        "line 111:\n",
-        "l1_delta = l1_error X nonlin(l1,deriv=True)\n",
-        "= 1.49 X nonlin(0.98)\n",
-        "= 1.49 X 0.02\n",
-        "= 0.03\n",
-        "\n",
-        "\n",
-        "syn0 += l0.T.dot(l1_delta) \n",
-        "Note that \"+=\" means to add to the existing, so:\n",
-        "3.66 += 1 x (0.03)\n",
-        "= 3.66 + 0.03\n",
-        "= 3.69 = our new syn0,1 to be used in our next iteration!\n",
-        "```\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "**DCQ: I just wrote above that, \"for every 1 we increase syn0,1, the l2_error decreases by 0.1221.\"  Therefore, can I say that, \"I updated syn0,1 from 3.66 to 3.69, therefore, according to my ratio, the l2_error of my next iteration will decrease by 0.0037?  Here's the math I used to calculate that:**\n",
-        "1/0.03 = 0.1221/z\n",
-        "\n",
-        "**z = 0.003663\n",
-        "Is that wrong Adam?**\n",
-        "\n",
-        "If you have followed things thus far, then you are well on your way to becoming a Back Propagation Rock Star.  If not yet, hey--no problem!  Just reread the above several more times and click on the helpful links of the Super Teachers I have cited above.\n",
+        "Congrats!  You just completed your first chain rule calculation of back propagation.  If you have followed things thus far, then you are well on your way to becoming a Back Propagation Rock Star.  If not yet, hey--no problem!  Just reread the above several more times and click on the helpful links of the Super Teachers I have cited above.\n",
         "\n",
         "Here's a question I had when I had arrived at this stage: Why bother taking the slope of l2?  \n",
         "\n",
@@ -2221,7 +2165,48 @@
         "\n",
         "It seems what we **really** want to know is what **changes** in the current syn0 values will give us changes the improve the l2 values of the next iteration.  For each of the 12 values in syn0, do we want a positive change?  A negative one?  Big change?  Small?  \n",
         "\n",
-        "How do we figure **that** out?  The answer, my Lovelies, is we work *backward* from what we already know to figure out what we don't know yet.  And that is **back propagation.**"
+        "How do we figure **that** out?  The answer, my Lovelies, is we work *backward* from what we already know to figure out what we don't know yet.  And that is **back propagation.**\n",
+        "\n",
+        "---\n",
+        "\n",
+        "** Adam, I am SUPER unsure if I have used the right values in my math below.  Can you please check it?**\n",
+        "\n",
+        "Now let's walk through what would happen, if I updated syn0 for the next iteration, using line 116 of our code:\n",
+        "\n",
+        "```\n",
+        "l2 slopes after nonlin():    l2_error:                l2_delta: \n",
+        "[0.25] Not Confident        [ 0.50] Big Miss         [ 0.125] Big Change\n",
+        "[0.09] Fairly Confident  X  [ 0.10] Small Miss    =  [ 0.009] Small-ish Change\n",
+        "[0.05] Confident            [-0.05] Tiny Miss        [-0.003] Tiny Change\n",
+        "[0.21] Not Confident        [-0.70] Very Big Miss    [-0.150] Huge Change\n",
+        "\n",
+        "line 100:\n",
+        "l1_error = l2_delta.dot(syn1.T)\n",
+        "= (-0.1221) x 12.21\n",
+        "= 1.49\n",
+        "\n",
+        "line 111:\n",
+        "l1_delta = l1_error X nonlin(l1,deriv=True)\n",
+        "= 1.49 X nonlin(0.98)\n",
+        "= 1.49 X 0.02\n",
+        "= 0.03\n",
+        "\n",
+        "\n",
+        "syn0 += l0.T.dot(l1_delta) \n",
+        "Note that \"+=\" means to add to the existing, so:\n",
+        "3.66 += 1 x (0.03)\n",
+        "= 3.66 + 0.03\n",
+        "= 3.69 = our new syn0,1 to be used in our next iteration!\n",
+        "```\n",
+        "** I just wrote above that, \"for every 1 we increase syn0,1, the l2_error decreases by 0.1221.\"  Therefore, can I say that, \"I updated syn0,1 from 3.66 to 3.69, therefore, according to my ratio, the l2_error of my next iteration will decrease by 0.0037?  Here's the math I used to calculate that:**\n",
+        "1/0.03 = 0.1221/z\n",
+        "\n",
+        "**z = 0.003663\n",
+        "Is that wrong Adam?**\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n"
       ]
     }
   ]
