--- a/071919_Anyone_Can_Learn_AI_Using_This_Blog.ipynb
+++ b/071919_Anyone_Can_Learn_AI_Using_This_Blog.ipynb
@@ -6,8 +6,7 @@
       "name": "071919 Anyone Can Learn AI Using This Blog.ipynb",
       "version": "0.3.2",
       "provenance": [],
-      "collapsed_sections": [],
-      "include_colab_link": true
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -15,16 +14,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/davidAcode/davidAcode.github.io/blob/master/071919_Anyone_Can_Learn_AI_Using_This_Blog.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "metadata": {
